# Negoti_Arena

./: .gitignore  Dockerfile  LICENSE  NegotiArena_Colab.ipynb  NegotiArena_Training.ipynb  README.md  eval_before.json  fix_all.py  inference.py  negotiarena_env.py  openenv.yaml  pyproject.toml  requirements.txt  wandb_export_2026-04-26T12_29_53.990+05_30.csv
data/: sft_episodes_summary.json
demo/: app.py
evaluation/: evaluator.py
server/: app.py  blog.py  index.html  script.js  style.css
server/data/: dashboard_data.json
tests/: NegotiArena_Colab.ipynb  test_env.py
training/: evaluate_overseer.py  generate_sft_data.py  plot_curves.py  prompts.py  rlvr.py  train_cpu.py  train_grpo.py  train_grpo_minimal.py
wandb/run-20260425_091630-zz7azcxq/: run-zz7azcxq.wandb
wandb/run-20260425_091630-zz7azcxq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260425_095547-tyhvep2b/: run-tyhvep2b.wandb
wandb/run-20260425_095547-tyhvep2b/files/: config.yaml  wandb-metadata.json  wandb-summary.json
