[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "negotiarena"
version = "1.0.0"
description = "NegotiArena: Multi-agent negotiation environment for scalable oversight training"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "NegotiArena Team" }
]
keywords = [
    "reinforcement-learning",
    "multi-agent",
    "negotiation",
    "llm-training",
    "openenv",
    "scalable-oversight",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "openenv>=0.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.8.6",
    "datasets>=2.18.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "wandb>=0.16.0",
    "huggingface-hub>=0.22.0",
]
demo = [
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
]

[project.scripts]
negotiarena-server = "server.app:main"
negotiarena-train = "training.train_grpo:main"
negotiarena-eval = "evaluation.evaluator:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "training", "evaluation", "demo"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]